<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/channel_name"
        android:padding="5dp"
        android:text="@string/channel_placeholder"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="@color/orange"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/message"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/message"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/imageButtonImage" />

        <ImageButton
            android:id="@+id/imageButtonImage"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:contentDescription="@string/send_image"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_attach_file_24"
            app:layout_constraintBottom_toBottomOf="@id/message"
            app:layout_constraintTop_toTopOf="@id/message"
            app:layout_constraintLeft_toRightOf="@id/message"
            app:layout_constraintRight_toRightOf="@id/imageButtonMessage"/>

        <ImageButton
            android:id="@+id/imageButtonMessage"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:contentDescription="@string/send_message"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_send_24"
            app:layout_constraintBottom_toBottomOf="@id/message"
            app:layout_constraintTop_toTopOf="@id/message"
            app:layout_constraintLeft_toRightOf="@id/imageButtonImage"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>